--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -4,3 +4,4 @@ password = Ygavete
 chromepath=./Driver\\chromedriver.exe
 iepath=./Driver\\IEDriverServer.exe
 firefoxpath=./Driver\\geckodriver.exe
+admin=mayank
